# mini-santa

./: .gitignore  Cargo.toml  Config.toml  Config.toml.template  Dockerfile  README.md  docker-compose.yaml
app/templates/: index.html
app/templates/database_scripts/account/: create_account.sql  delete_account_by_id.sql  delete_account_by_login.sql  exists_account_by_id.sql  exists_account_by_id_or_login.sql  exists_account_by_login.sql  get_account_by_id.sql  get_account_by_login.sql  set_account_login.sql  set_account_password.sql
app/templates/database_scripts/account_session/: create_account_session.sql  delete_account_session_by_id.sql  (+17 more)
bash-scripts/: entrypoint.sh  healthcheck.sh
caddy_conf/: Caddyfile
mini-santa-frontend-riotjs/: package-lock.json  package.json  readme.md  webpack.config.js
mini-santa-frontend-riotjs/src/: action-status-info-component.riot  api-helper.js  app.riot  auth-helper.js  base-layout.riot  index.html  index.js  info-handler.js
mini-santa-frontend-riotjs/src/pages/: add-to-pool-page.riot  create-invite-code-page.riot  create-pool-page.riot  delete-pool-page.riot  index-page.riot  invite-codes-page.riot  login-page.riot  logout-page.riot  pool-details-page.riot  pools-page.riot  room-details-page.riot  rooms-page.riot  signup-page.riot
mini-santa-frontend-riotjs/src/styles/: add-to-pool.css  base-layout.css  basic.css  login.css  pools.css  rooms.css  signup.css
src/: main.rs
src/core/: mod.rs
src/core/background_tasks/: delete_old_account_sessions.rs  delete_old_auth_codes.rs  mod.rs
src/core/backround_tasks/: delete_old_account_sessions.rs  delete_old_auth_codes.rs  mod.rs
src/core/config/: admin_config.rs  app_config.rs  auth_config.rs  database_config.rs  mod.rs  santa_config.rs  server_config.rs
src/core/controllers/: account_controller.rs  api_controller.rs  auth_router.rs  crud_controller.rs  healthcheck_controller.rs  invite_router.rs  mod.rs  oauth_controller.rs  user_controller.rs  user_router.rs
src/core/functions/: init_database.rs  mod.rs  universal.rs
src/core/services/: account_service.rs  account_session_service.rs  auth_code_service.rs  auth_service.rs  client_service.rs  db_service.rs  invite_service.rs  mod.rs  public_user_info_service.rs  recovery_user_info_service.rs  role_service.rs  roles_user_info_service.rs  universal_service.rs
src/santa/: mod.rs
src/santa/background_tasks/: delete_old_messages.rs  delete_old_pools.rs  mod.rs
src/santa/controllers/: member_router.rs  message_router.rs  mod.rs  pool_router.rs  room_router.rs  santa_router.rs  santa_user_controllers.rs
src/santa/data_model/: mod.rs
src/santa/functions/: init_database.rs  mod.rs
src/santa/services/: member_service.rs  message_service.rs  mod.rs  pool_service.rs  room_service.rs  santa_service.rs
(+123 files in other folders)
