[package]
name = "mini-santa"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "^0.8.4", features = ["http2", "json"] }
axum-extra = { version = "^0.10.1", features = ["cookie", "cookie-private", "typed-header"]}
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "^0.6.6", features = ["trace", "fs"] }
tera = { version = "^1" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_repr = { version = "0.1"}
toml = { version = "0.9"}
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "^0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
uuid = { version = "1", features = ["serde", "v4"] }
ring = { version = "0.17" }
rand = { version = "0.9.2" }
data-encoding = { version = "2.9.0" }
futures = { version = "^0.3.31"}
regex = { version = "^1.11.1"}
axum-auth = { version = "^0.8.1" }
async_fn_traits = { version = "^0.1.1" }